# neumann-prover

./: .gitignore  .vercelignore  API_DOCUMENTATION.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  VERCEL_DEPLOYMENT.md  docker-compose.yml  pyproject.toml  requirements.txt  start_web.sh  test_web_api.py  vercel.json
api/: index.py
neumann-prover/: .gitignore
scripts/: setup_lean_env.sh
src/neumann_prover/: __init__.py  ask_llm.py  correction.py  providers.py  stages.py  utils.py  web_app.py
src/neumann_prover/pipelines/: __init__.py  batch.py  formal_proof.py  formal_statement.py  informal.py
src/neumann_prover/static/: app.js  index.html  styles.css
