[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neumann-prover"              
version = "0.1.0"
description = "End-to-end autoformalization of math proofs using general-purpose LLMs and Lean."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ritik Jain" }]
dependencies = [
  "openai>=1.0.0",
  "anthropic>=0.30.0",
  "together>=0.2.0",
  "tqdm>=4.66.0"
]

[project.scripts]
neumann-prover = "neumann_prover.pipelines.batch:cli_main"

[tool.setuptools]
package-dir = {"" = "src"}         

packages = [
  "neumann_prover",
  "neumann_prover.pipelines",
]
